# too-many-cooks

./: Cargo.toml  design.md
src/: appstate.rs  assets.rs  lib.rs  main.rs
src/characters/: mod.rs  player.rs  stats.rs
src/core/: spring.rs
src/game_logic/: engine.rs  mod.rs  player_controller.rs  raycast.rs  ship_engine.rs
src/level/: mod.rs
