[package]
name = "too_many_cooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0" }
bevy_egui = "0.23"
bevy-inspector-egui = { version = "0.21" }
bevy_vector_shapes = "0.6"
#https://github.com/laundmo/bevy_screen_diagnostics
bevy_screen_diagnostics = { version = "0.4" }

rand = "0.8.5"

bevy_twin_stick = {git = "https://github.com/Zellenon/bevy_twin_stick.git", branch="bevy12"}
bevy_composable = {git = "https://github.com/Zellenon/bevy_composable.git", branch="bevy-12"}
bevy_stats = {git = "https://github.com/Zellenon/bevy_stats.git", branch="bevy-12"}

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
